Refactor ControlPlane contract

--- a/controlplane/kubeadm/config/crd/bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanes.yaml
+++ b/controlplane/kubeadm/config/crd/bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanes.yaml
@@ -4465,8 +4465,11 @@ spec:
                 type: string
               initialized:
                 description: |-
-                  Initialized denotes whether or not the control plane has the
-                  uploaded kubeadm-config configmap.
+                  Initialized denotes that the KubeadmControlPlane API Server is initialized and thus
+                  it can accept requests.
+                  NOTE: this field is part of the Cluster API contract and it is used to orchestrate provisioning.
+                  The value of this field is never updated after provisioning is completed. Please use conditions
+                  to check the operational state of the control plane.
                 type: boolean
               lastRemediation:
                 description: LastRemediation stores info about last remediation performed.
