--- a/.golangci.yml
+++ b/.golangci.yml
@@ -241,10 +241,14 @@ issues:
   - linters:
       - staticcheck
     text: "SA1019: ((deployment|m|md).Spec.RevisionHistoryLimit|clusterv1.RevisionHistoryAnnotation|c.RolloutUndo) is deprecated"
-    # Deprecations for MHC MaxUnhealthy, UnhealthyRange
+  # Deprecations for MHC MaxUnhealthy, UnhealthyRange
   - linters:
       - staticcheck
     text: "SA1019: (mhc|m)(.Spec.MaxUnhealthy|.Spec.UnhealthyRange) is deprecated"
+  # Deprecations for FailureMessage and FailureReason
+  - linters:
+      - staticcheck
+    text: "SA1019: .*\\.Status\\.(FailureMessage|FailureReason) is deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details."
   # Specific exclude rules for deprecated packages that are still part of the codebase. These
   # should be removed as the referenced deprecated packages are removed from the project.
   - linters:
