--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -97,6 +97,14 @@ rules:
   - update
   - watch
 - apiGroups:
+  - cluster.x-k8s.io
+  resources:
+  - machinedrainrules
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - ""
   resources:
   - configmaps
