Fix review findings

--- a/config/crd/bases/cluster.x-k8s.io_machinedrainrules.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machinedrainrules.yaml
@@ -63,6 +63,13 @@ spec:
                     description: |-
                       behavior defines the drain behavior.
                       Can be either "Drain" or "Skip".
+                      "Drain" means that the Pods to which this MachineDrainRule applies will be drained.
+                      If behavior is set to "Drain" the order in which Pods are drained can be configured
+                      with the order field. When draining Pods of a Node the Pods will be grouped by order
+                      and one group after another will be drained (by increasing order). Cluster API will
+                      wait until all Pods of a group are terminated / removed from the Node before starting
+                      with the next group.
+                      "Skip" means that the Pods to which this MachineDrainRule applies will be skipped during drain.
                     enum:
                     - Drain
                     - Skip
@@ -73,6 +80,7 @@ spec:
                       Pods with higher order are drained after Pods with lower order.
                       order can only be set if behavior is set to "Drain".
                       If order is not set, 0 will be used.
+                      Valid values for order are from -2147483648 to 2147483647 (inclusive).
                     format: int32
                     type: integer
                 required:
@@ -82,10 +90,13 @@ spec:
                 description: |-
                   machines defines to which Machines this MachineDrainRule should be applied.
 
-                  If machines is empty, the MachineDrainRule applies to all Machines.
+                  If machines is empty, the MachineDrainRule applies to all Machines in the Namespace.
                   If machines contains multiple selectors, the results are ORed.
-                  Within a single selector the results of selector and clusterSelector are ANDed.
-                  This field is NOT optional.
+                  Within a single Machine selector the results of selector and clusterSelector are ANDed.
+                  Machines will be selected from all Clusters in the Namespace unless otherwise
+                  restricted with the clusterSelector.
+                  An empty Machine selector matches all Machines in the Namespace.
+                  This field is required.
 
                   Example: Selects control plane Machines in all Clusters and
                            Machines with label "os" == "linux" in Clusters with label
@@ -217,15 +228,19 @@ spec:
                       x-kubernetes-map-type: atomic
                   type: object
                 maxItems: 32
+                minItems: 1
                 type: array
               pods:
                 description: |-
                   pods defines to which Pods this MachineDrainRule should be applied.
 
-                  If pods is empty, the MachineDrainRule applies to all Pods.
+                  If pods is empty, the MachineDrainRule applies to all Pods in all Namespaces.
                   If pods contains multiple selectors, the results are ORed.
-                  Within a single selector the results of selector and namespaceSelector are ANDed.
-                  This field is NOT optional.
+                  Within a single Pod selector the results of selector and namespaceSelector are ANDed.
+                  Pods will be selected from all Namespaces unless otherwise
+                  restricted with the namespaceSelector.
+                  An empty Pod selector matches all Pods in all Namespaces.
+                  This field is required.
 
                   Example: Selects Pods with label "app" == "logging" in all Namespaces and
                            Pods with label "app" == "prometheus" in the "monitoring"
@@ -356,6 +371,7 @@ spec:
                       x-kubernetes-map-type: atomic
                   type: object
                 maxItems: 32
+                minItems: 1
                 type: array
             required:
             - drain
