--- a/config/crd/bases/cluster.x-k8s.io_machinedrainrules.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machinedrainrules.yaml
@@ -385,6 +385,7 @@ spec:
             - drain
             type: object
         required:
+        - metadata
         - spec
         type: object
     served: true
