update env value

--- a/.github/workflows/weekly-go-version-check.yaml
+++ b/.github/workflows/weekly-go-version-check.yaml
@@ -5,10 +5,9 @@ on:
   push:
     branches:
       - automate-go-patching
-
-  # schedule:
-  #   # Cron for every Mon at 12:00 UTC.
-  #   - cron: "0 12 * * 1"
+  schedule:
+    # Cron for every Mon at 12:00 UTC.
+    - cron: "0 12 * * 1"
 
 permissions:
   contents: write
@@ -34,16 +33,15 @@ jobs:
       - name: Get latest go patch version
         id: patch-version
         run: |
-          export GO_PATCH_VERSION=$(curl --silent https://go.dev/VERSION?m=text)
-          sed -i 's/GO_VERSION=[0-9\.]*/GO_VERSION=$GO_PATCH_VERSION/' Makefile
-          sed -i 's/golang:[0-9\.]*/golang:$GO_PATCH_VERSION/' Tiltfile
+          echo "GO_PATCH_VERSION=$(curl --silent https://go.dev/VERSION?m=text | sed -n 's/^go\([0-9.]*\).*/\1/p')" >> $GITHUB_ENV
+          pwd
+          sed -i 's/GO_VERSION=[0-9\.]*/GO_VERSION=${{ env.GO_PATCH_VERSION }}/' Makefile
+          sed -i 's/golang:[0-9\.]*/golang:${{ env.GO_PATCH_VERSION }}/' Tiltfile
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@5e914681df9dc83aa4e4905692ca88beb2f9e91f # tag=v7.0.5
         with:
-          commit-message: Bump to Go ${GO_PATCH_VERSION}
-          title: "Bump to Go patch version ${GO_PATCH_VERSION}"
+          commit-message: Bump to Go ${{ env.GO_PATCH_VERSION }}
+          title: "Bump to Go patch version ${{ env.GO_PATCH_VERSION }}"
           body: |
             This PR promotes current GO version to the latest patch version of ${GO_PATCH_VERSION}
-          branch: promote-go-patch-version-${{ GO_PATCH_VERSION }}
-
-      
+          branch: promote-go-patch-version-${{ env.GO_PATCH_VERSION }}
