support disabling load balancer creation for DockerCluster

--- a/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockerclustertemplates.yaml
+++ b/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockerclustertemplates.yaml
@@ -250,6 +250,10 @@ spec:
                                 type: string
                             type: object
                             x-kubernetes-map-type: atomic
+                          disable:
+                            description: Disable allows skipping the creation of the
+                              cluster load balancer.
+                            type: boolean
                           imageRepository:
                             description: |-
                               ImageRepository sets the container registry to pull the haproxy image from.
