--- a/config/crd/bases/cluster.x-k8s.io_machinedeployments.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machinedeployments.yaml
@@ -1136,6 +1136,8 @@ spec:
                   process failed deployments and a condition with a ProgressDeadlineExceeded
                   reason will be surfaced in the deployment status. Note that progress will
                   not be estimated during the time a deployment is paused. Defaults to 600s.
+
+                  Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/issues/11470 for more details.
                 format: int32
                 type: integer
               replicas:
