--- a/.github/workflows/pr-verify.yaml
+++ b/.github/workflows/pr-verify.yaml
@@ -1,19 +1,19 @@
-name: PR title verifier
+name: PR verify
 
 on:
   pull_request_target:
     types: [opened, edited, synchronize, reopened]
 
+permissions:
+  checks: write # Allow access to checks to write check runs.
+
 jobs:
   verify:
     runs-on: ubuntu-latest
-
+    name: verify PR contents
     steps:
-      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # tag=v4.1.7
-
-      - name: Check if PR title is valid
-        env:
-          PR_TITLE: ${{ github.event.pull_request.title }}
-        run: |
-          ./hack/verify-pr-title.sh "${PR_TITLE}"
-
+    - name: Verifier action
+      id: verifier
+      uses: kubernetes-sigs/kubebuilder-release-tools@d8367c29de8af903319d3a76de2436672515729b # tag=v0.4.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
