change semantic meaning of the Version fields from Kubernetes version to Kubernetes distribution version
Signed-off-by: Riccardo Piccoli <rpiccoli@redhat.com>

--- a/config/crd/bases/cluster.x-k8s.io_machinedeployments.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machinedeployments.yaml
@@ -1536,7 +1536,7 @@ spec:
                         x-kubernetes-list-type: map
                       version:
                         description: |-
-                          version defines the desired Kubernetes version.
+                          version defines the desired Kubernetes distribution version.
                           This field is meant to be optionally used by bootstrap providers.
                         type: string
                     required:
