--- a/config/crd/bases/cluster.x-k8s.io_machines.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machines.yaml
@@ -1065,7 +1065,7 @@ spec:
                 x-kubernetes-list-type: map
               version:
                 description: |-
-                  version defines the desired Kubernetes version.
+                  version defines the desired Kubernetes distribution version.
                   This field is meant to be optionally used by bootstrap providers.
                 type: string
             required:
