--- a/.golangci.yml
+++ b/.golangci.yml
@@ -166,6 +166,8 @@ linters-settings:
       - pkg: sigs.k8s.io/cluster-api/exp/runtime/catalog
         alias: runtimecatalog
       - pkg: sigs.k8s.io/cluster-api/internal/runtime/client
+        alias: internalruntimeclient
+      - pkg: sigs.k8s.io/cluster-api/exp/runtime/client
         alias: runtimeclient
       - pkg: sigs.k8s.io/cluster-api/internal/runtime/registry
         alias: runtimeregistry
