Add PriorityQueue feature gate
Signed-off-by: Stefan Büringer buringerst@vmware.com

--- a/test/e2e/config/docker.yaml
+++ b/test/e2e/config/docker.yaml
@@ -401,6 +401,7 @@ variables:
   CLUSTER_TOPOLOGY: "true"
   EXP_RUNTIME_SDK: "true"
   EXP_MACHINE_SET_PREFLIGHT_CHECKS: "true"
+  EXP_PRIORITY_QUEUE: "false"
   CAPI_DIAGNOSTICS_ADDRESS: ":8080"
   CAPI_INSECURE_DIAGNOSTICS: "true"
 
