--- a/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesets.yaml
+++ b/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesets.yaml
@@ -367,9 +367,8 @@ spec:
     schema:
       openAPIV3Schema:
         description: |-
-          ClusterResourceSet is the Schema for the clusterresourcesets API
-          it provides a basic solution for installing & managing resources
-          while for advanced use cases an addon provider must be used.
+          ClusterResourceSet is the Schema for the clusterresourcesets API.
+          For advanced use cases an add-on provider should be used instead.
         properties:
           apiVersion:
             description: |-
