:sparkles: Promote feature CRS to GA (#11365)
* initial changes: promote CRS to GA

* Remove CRS from experimental-features

* Address reviews

* Fix Lint

--- a/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesets.yaml
+++ b/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesets.yaml
@@ -366,8 +366,9 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: ClusterResourceSet is the Schema for the clusterresourcesets
-          API.
+        description: |-
+          ClusterResourceSet is the Schema for the clusterresourcesets API.
+          For advanced use cases an add-on provider should be used instead.
         properties:
           apiVersion:
             description: |-
